tests/whiley/valid/test_1127.wyal
define nat(int x) is:
    x >= 0


type nat is (int x)
where:
    nat(x)


function id(nat x) -> (nat y)

assert "type invariant not satisfied":
    if:
        id(0) == 0
        id(1) == 1
    then:
        2 is nat


